# aqmon-firmware

./: .gitignore  Cargo.toml  README.md
aqmon-main/: Cargo.toml
aqmon-main/src/: main.rs
crates/: Cargo.toml
crates/aqmon-ctl/: Cargo.toml
crates/aqmon-ctl/src/: main.rs
crates/messages/: Cargo.toml
crates/messages/src/: command.rs  config.rs  lib.rs
cross/aqmon-main/: Cargo.toml  sdkconfig.defaults
cross/aqmon-main/src/: command.rs  config.rs  main.rs
pms5003/: Cargo.toml
pms5003/src/: lib.rs
src/: main.rs
