[package]
name = "aqmon-firmware"
version = "0.1.0"
authors = ["Andrew McHarg <amcharg@gmail.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
byteorder = "1.4.3"
embedded-hal = "1.0.0-alpha.8"
esp-idf-hal = "0.37.4"
esp-idf-sys = { version = "0.31.5", features = ["binstart"] }


[build-dependencies]
embuild = "0.29"
anyhow = "1"
