[package]
name = "aqmon-ctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3.1.18", features = ["derive"] }
serde = "1"
serde_json = "1"
serialport = "4.1.0"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
messages = { path = "../messages" }