[package]
name = "aqmon-firmware-main"
version = "0.1.0"
authors = ["Andrew McHarg <amcharg@gmail.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
incremental = false

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
embedded-hal = "1.0.0-alpha.8"
esp-idf-hal = "0.37.4"
esp-idf-svc = "0.41.3"
esp-idf-sys = { version = "0.31.5", features = ["binstart"] }
pms5003 = { path = "../../crates/pms5003", features = ["std"] }
# messages = { path = "../../messages" }
anyhow = "1"
embedded-svc = "0.21.2"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
serde = "1"
postcard = { version = "0.7.3", default-features = false, features = ["use-std"] }
serde_json = "1.0.81"
once_cell = "1.12.0"

[build-dependencies]
embuild = "0.29"
anyhow = "1"
